<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:orientation="vertical"
    android:padding="20dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <!--Заголовок программы -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/title_app"
            android:textColor="@color/primary_text"
            android:textSize="24sp"
            android:textStyle="bold" />
        <!--Checkbox и поле ввода-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="#FFFFFF"
            android:elevation="4dp"
            android:orientation="vertical"
            android:padding="20dp">

            <!--Checkbox-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkboxCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_info"
                    android:textSize="18sp" />
            </LinearLayout>

            <!--Поле информация-->
            <EditText
                android:id="@+id/info_textET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:enabled="false"
                android:hint="@string/hint_info"
                android:inputType="text"
                android:padding="15dp"
                android:textColor="@color/secondary_text"
                android:textSize="16sp" />
        </LinearLayout>

        <!--Контейнер для правил (изначально скрыт)-->

        <LinearLayout
            android:id="@+id/rules_cardLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/rules_background"
            android:elevation="4dp"
            android:orientation="vertical"
            android:padding="20dp"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/traffic_laws"
                android:textColor="@color/rules_title"
                android:textSize="20sp"
                android:textStyle="bold" />
            <!--Контейнер для динамического добавления правил-->
            <LinearLayout
                android:id="@+id/rules_containerLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

        </LinearLayout>
        <!--Инструкция-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/instruction_background"
            android:elevation="4dp"
            android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:padding="20dp"
                    android:text="@string/title_info"
                    android:textColor="@color/primary_text"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="5sp"
                    android:padding="20dp"
                    android:text="@string/info"
                    android:textColor="@color/secondary_text"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
</ScrollView>